test/parsetest/valid/types_and_local_vars.java
class A {
    public void abc(){
        int[] a = new int[3];
        a[4][5][5] = 45;
    }

    public int[] abc(){
        SomeClass[] abc = new int[4][][];
        SomeClass[4] = (SomeClass[4][5]);
    }
}