test/parsetest/invalid/static_methods.java
class A {

    public static void bla(int[] bl){

    }
}